--- a/Example/ZPTextAttribiteFild/ZPTextAttribiteFild-Info.plist
+++ b/Example/ZPTextAttribiteFild/ZPTextAttribiteFild-Info.plist
@@ -27,7 +27,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>MineNewAddressController</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
